# real-time-obj-det

./: .gitignore  README.md  docker-compose-elastic.yml  docker-compose-triton.yml
assets/: elasticsearch-config.txt
client-real-time/: README.md  run_image.sh  run_image_ids.sh  run_local.sh  run_local_ids.sh
client-real-time/assets/: architecture.drawio  config_template.pbtxt  display_streams_metrics.ipynb
client-real-time/client/: Cargo.toml
client-real-time/client/secrets/: config.yaml
client-real-time/client/src/: client_video.rs  inference.rs  lib.rs  main.rs  processing.rs  shm.rs  source.rs  statistics.rs  utils.rs
client-real-time/client/src/processing/: dino.rs  yolo.rs
client-real-time/client/src/utils/: config.rs  elastic.rs  queue.rs
client-search/: run_local.sh
client-search/client/: Cargo.toml
client-search/client/secrets/: config.yaml
client-search/client/src/: handlers.rs  inference.rs  lib.rs  main.rs  processing.rs  statistics.rs  utils.rs
client-search/client/src/handlers/: api.rs
client-search/client/src/handlers/models/: mod.rs  post.rs
client-search/client/src/processing/: dino.rs  search.rs
client-search/client/src/utils/: config.rs  elastic.rs
client-triton/: docker-compose-elastic.yml  docker-compose-kafka.yml  run_local.sh
client-triton/assets/elasticsearch/: index_creation.txt
client-triton/client/: Cargo.toml
client-triton/client/secrets/: config.yaml
client-triton/client/src/: main.rs  source.rs  utils.rs
model-optimization/: ONNX_PATCHED.md  README.md  export_model.py  export_utils.py  inject_nms.py  pyproject.toml
video-player/: run_local.sh
video-player/backend/: pyproject.toml
(+6 files in other folders)
