[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.141"
image = "0.25.6"
triton-client = "0.2.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter", "time"] }
once_cell = "1.21.3"
anyhow = "1.0.98"
nvml-wrapper = "0.11.0"
tracing-appender = "0.2.3"
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
libloading = "0.8.9"
libc = "0.2.177"
serde_yaml = "0.9.34"
futures = "0.3.31"
elasticsearch = "9.1.0-alpha.1"
chrono = "0.4.42"